Fix layout problems in IE

--- a/source/sass/main-blocks/green.scss
+++ b/source/sass/main-blocks/green.scss
@@ -75,6 +75,11 @@
     width: 100%;
     height: 100%;
   }
+
+  .green__image {
+    width: 100%;
+    height: 100%;
+  }
   
   .green__content {
     fill: $white;
