--- a/source/sass/main-blocks/light-gray.scss
+++ b/source/sass/main-blocks/light-gray.scss
@@ -1,7 +1,11 @@
 .light-gray {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   margin-bottom: 10px;
+}
+
+.light-gray__wrapper {
+  display: flex;
 }
 
 .light-gray__employees {
@@ -21,3 +25,4 @@
   display: flex;
   align-items: flex-end;
 }
+
