--- a/source/sass/main-blocks/multicolored.scss
+++ b/source/sass/main-blocks/multicolored.scss
@@ -1,9 +1,4 @@
-.multicolored__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.multicolored__wrapper--small {
+.multicolored__wrapper-small {
   display: flex;
   flex-wrap: wrap;
 }
@@ -16,6 +11,11 @@
   padding: 15px;
   min-height: 155px;
   margin-bottom: 10px;
+}
+
+.multicolored__wrapper-extra {
+  display: flex;
+  width: 100%;
 }
 
 .multicolored__point {
@@ -41,14 +41,14 @@
     display: flex;
   }
 
-  .multicolored__wrapper--small {
+  .multicolored__wrapper {
     width: 66.2%;
     order: 2;
     display: flex;
     flex-wrap: wrap;
   }
 
-  .multicolored__wrapper {
+  .multicolored__wrapper-small {
     width: 32.3%;
     order: 1;
     flex-direction: column;
